* Removed shadows from single-specimen markers * Fixed an issue in leaflet.vector-markers lib that caused inner icons to not display properly on firefox

--- a/css/Leaflet.vector-markers.css
+++ b/css/Leaflet.vector-markers.css
@@ -24,11 +24,11 @@ Version: 1.0
     opacity: 0.5;
 }
 
-.vector-marker-shadow {
-    background: url("assets/shadow.png") no-repeat 0 0;
-    width: 36px;
-    height: 16px;
-}
+/*.vector-marker-shadow {*/
+/*background: url("assets/shadow.png") no-repeat 0 0;*/
+/*width: 36px;*/
+/*height: 16px;*/
+/*}*/
 
 /* Retina displays */
 @media (min--moz-device-pixel-ratio: 1.5), (-o-min-device-pixel-ratio: 3 / 2), (-webkit-min-device-pixel-ratio: 1.5), (min-device-pixel-ratio: 1.5), (min-resolution: 1.5dppx) {
@@ -36,10 +36,10 @@ Version: 1.0
         background-size: 720px 46px;
     }
 
-    .vector-marker-shadow {
-        background-image: url("assets/shadow@2x.png");
-        background-size: 54px 51px;
-    }
+    /*.vector-marker-shadow {*/
+    /*background-image: url("assets/shadow@2x.png");*/
+    /*background-size: 54px 51px;*/
+    /*}*/
 }
 
 .vector-marker i {
@@ -51,6 +51,7 @@ Version: 1.0
     margin: auto;
     display: inline-block;
     font-size: 14px;
+    z-index: 500000;
 }
 
 .vector-marker i.maki-icon {
